# mcmc

./: .gitignore  CMakeLists.txt  README.md
data/: example.data
src/: CMakeLists.txt  SudokuApp.cpp  main.cpp  simple.cpp  sudoku.cpp
